@@ -1,3 +1,13 @@
+2004-03-14  Christopher Faylor  <cgf@redhat.com>
+
+	* cygtls.cc (_cygtls::remove): Call remove_wq to ensure that wait stuff
+	is removed from proc_subproc linked list.
+	* cygtls.h (_cygtls::remove_wq): Declare.
+	* sigproc.cc (_cygtls::remove_wq): Define.
+	(proc_subproc): Label event handle appropriately.
+	* spawn.cc (spawn_guts): Return -1 when wait() fails for spawn types
+	that require waiting.
+
 2004-03-12  Corinna Vinschen  <corinna@vinschen.de>
 
 	* errno.cc (errmap): Handle ERROR_BUS_RESET.
